--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
          </div> <br>
          
         <div>
-           <h3><i class="fas fa-map-marker-alt" id="icons"></i> Cité universitaire, sidi massoud Hiboun, 5147</h3>
+           <h3><i class="fas fa-map-marker-alt" id="icons"></i> Cité universitaire, institut supérieur d'informatique de mahdia , 5147</h3>
         </div>  <br>
 
         <div>
