ajoute de button qui change le couleur vers DARK MODE

--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
 
         
         </div>
+    <button type="button" onclick="myFunction()">Set background color</button>
+
+      <script>
+      function myFunction() {
+        document.body.style.backgroundColor = "black";
+      }
+      </script>
+
 
 </body>
 </html>
