ajouter une function  JS du botton

--- a/index.html
+++ b/index.html
@@ -96,7 +96,13 @@
 
         
         </div>
-    
+    <button type="button" onclick="myFunction()">Set background color</button>
+
+      <script>
+      function myFunction() {
+        document.body.style.backgroundColor ="dark";
+      }
+      </script>
 
 
 </body>
