mise a jour de page index

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                   </div>
 
               <!-- background color change button -->
-
-              <button type="button" onclick="myFunction()">Set background color</button>
-
+<center>
+              <button type="button" onclick="myFunction()" >Set background color</button>
+</center>
               <script>
               function myFunction() {
                 document.body.style.backgroundColor ="black";
