--- a/JavaCourse.html
+++ b/JavaCourse.html
@@ -181,7 +181,7 @@
                  Example use of private keyword.
                  static keyword.
                  Example use of static keyword.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <p class="card-text"><small class="text-muted">Last updated 1 day ago</small></p>
             </div>
           </div>
           <div class="card">
@@ -193,7 +193,7 @@
               <p class="card-text">Topics discussed:
                 Return types in Java.
                 The void return type in Java. </p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <p class="card-text"><small class="text-muted">Last updated 1 day ago</small></p>
             </div>
           </div>
           <div class="card">
@@ -205,7 +205,7 @@
               <p class="card-text">Topics discussed:
                 Command line arguments.
                 Passing the arguments to our program using the command window and IntelliJ.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <p class="card-text"><small class="text-muted">Last updated 1 day ago</small></p>
             </div>
           </div>
         </div>
@@ -221,7 +221,7 @@
               <p class="card-text">Topics discussed:
                 Indentation and Spacing.
                 Block Styles. </p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <p class="card-text"><small class="text-muted">Last updated 1 day ago</small></p>
             </div>
           </div>
           <div class="card">
@@ -235,7 +235,7 @@
                  Runtime Errors.
                  Logical Errors.
                  Common Errors.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <p class="card-text"><small class="text-muted">Last updated 1 day ago</small></p>
             </div>
           </div>
           <div class="card">
@@ -247,7 +247,7 @@
               <p class="card-text">Topics discussed:
                  Creating a new class in Java.
                  Creating a new method in Java.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <p class="card-text"><small class="text-muted">Last updated 1 day ago</small></p>
             </div>
           </div>
         </div>
