--- a/JavaCourse.html
+++ b/JavaCourse.html
@@ -214,7 +214,7 @@
             </div>
           </div>
         </div>
-        
+
 
 
         <div class="card-deck">
@@ -246,13 +246,18 @@
           </div>
           <div class="card">
              <iframe width="360" height="300"
-              src="https://www.youtube.com/embed/mgixJYEZ1Fk">
+              src="https://www.youtube.com/embed/N2m2pm1rMPE">
             </iframe>
             <div class="card-body">
               
               <p class="card-text">Topics discussed:
-                 Creating a new class in Java.
-                 Creating a new method in Java.</p>
+                 Navigation in IntelliJ.
+                 Selection on IntelliJ.
+                 Indentation in IntelliJ.
+                 Duplicating the code in IntelliJ.
+                 Adding and removing the comments in IntelliJ.
+                 Moving a piece of code in IntelliJ.
+                 Selecting a code block in IntelliJ. </p>
               <p class="card-text"><small class="text-muted">Last updated 1 day ago</small></p>
             </div>
           </div>
