--- a/PHPCourse.html
+++ b/PHPCourse.html
@@ -147,7 +147,7 @@
               <p class="card-text">Topics discussed:
                 In this video we will take a look at the $_GET and $_POST superglobals as well as form processing. 
                 We will also look at the htmlentities() function for page security </p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <p class="card-text"><small class="text-muted">Last updated 1 day ago</small></p>
             </div>
           </div>
           <div class="card">
@@ -158,7 +158,7 @@
               
               <p class="card-text">Topics discussed:
                 In this video we will go over some common and useful string functions</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <p class="card-text"><small class="text-muted">Last updated 1 day ago</small></p>
             </div>
           </div>
           <div class="card">
@@ -169,7 +169,7 @@
               
               <p class="card-text">Topics discussed:
                 In this video we will look at the PHP ternary operator and some alternative syntax for if statements as well as loops.</p>
-              <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+              <p class="card-text"><small class="text-muted">Last updated 1 day ago</small></p>
             </div>
           </div>
         </div>
